force-app/main/default/objects/SVMXA360__ContractPriceLineItemPlan__c/SVMXA360__ContractPriceLineItemPlan__c.object-meta.xml
<CustomObject>
    <description>Stores the plans/templates to author Contract Price Line Items.</description>
    <label>Contract Price Line Item Plan</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Price Line Item Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>