force-app/main/default/objects/SVMXA360__ContractPriceLineItemPlan__c/fields/SVMXA360__EntitledPrice__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EntitledPrice__c</fullName>
    <description>The negotiated price of the Part/Expense/Labor/Travel items.</description>
    <label>Entitled Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>