force-app/main/default/objects/SVMXA360__ContractPriceLineItemPlan__c/fields/SVMXA360__EntitledServicePlanId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EntitledServicePlanId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The lookup relationship to Entitled Service Plan.</description>
    <label>Entitled Service Plan</label>
    <referenceTo>SVMXA360__EntitledServicePlan__c</referenceTo>
    <relationshipLabel>Contract Price Line Item Plans</relationshipLabel>
    <relationshipName>Contract_Price_Line_Item_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>