force-app/main/default/objects/SVMXA360__ContractPriceLineItemPlan__c/fields/SVMXA360__ExpenseItem__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ExpenseItem__c</fullName>
    <description>The picklist values for expense items.</description>
    <label>Expense Item</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SVMXA360__ExpenseItem</valueSetName>
    </valueSet>
</CustomField>