force-app/main/default/objects/SVMXA360__ContractPriceLineItemPlan__c/fields/SVMXA360__LineLevel__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__LineLevel__c</fullName>
    <description>Indicates whether the Contract Price Line Item Plan belongs to the Service Contract Plan, the Entitled Service Plan, the Applicable Contract Line Product, or both the ES and CLI Plans.</description>
    <formula>IF(ISBLANK(SVMXA360__ContractLineItemPlanId__c), IF(ISBLANK(SVMXA360__EntitledServicePlanId__c), $Label.svmxa360__Label_ServiceContractPlan, $Label.svmxa360__Label_EntitledServicePlan), IF(ISBLANK(SVMXA360__EntitledServicePlanId__c), $Label.svmxa360__Label_ContractLineItemPlan, $Label.svmxa360__Label_CLIPlanAndESPlan))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Level</label>
    <type>Text</type>
</CustomField>