force-app/main/default/objects/SVMXA360__ContractPriceLineItemPlan__c/fields/SVMXA360__LineType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__LineType__c</fullName>
    <description>Indicates the type of Line Item.</description>
    <label>Line Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Parts</fullName>
            </value>
            <value>
                <fullName>Labor</fullName>
            </value>
            <value>
                <fullName>Expense</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>