force-app/main/default/objects/SVMXA360__ContractPriceLineItemPlan__c/fields/SVMXA360__ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ProductFamily__c</fullName>
    <description>The product family of the CPLI Plan. The picklist values should align with the &apos;Product Family&apos; field on the Product object.</description>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SVMXA360__ProductFamily</valueSetName>
    </valueSet>
</CustomField>