force-app/main/default/objects/SVMXA360__ContractPriceLineItemPlan__c/fields/SVMXA360__ProductId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The lookup to Product.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Contract Price Line Item Plans</relationshipLabel>
    <relationshipName>Contract_Price_Line_Item_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>