force-app/main/default/objects/SVMXA360__ContractPriceLineItemPlan__c/fields/SVMXA360__ServiceContractPlanId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ServiceContractPlanId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The lookup relationship to Service Contract Plan.</description>
    <label>Service Contract Plan</label>
    <referenceTo>SVMXA360__ServiceContractPlan__c</referenceTo>
    <relationshipLabel>Contract Price Line Item Plans</relationshipLabel>
    <relationshipName>Contract_Price_Line_Item_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>