force-app/main/default/objects/SVMXA360__ContractPriceLineItemPlan__c/fields/SVMXA360__Surcharge__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Surcharge__c</fullName>
    <description>The surcharge price for the Part/Expense/Labor/Travel items.</description>
    <label>Surcharge</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>